--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <header class="main-header container-positioner">
       <div class="header-background">
         <div class="top-header-wrapper">
-          <a class="main-logo" href="#">DEVICE</a>
+          <a class="main-logo" href="index.html">DEVICE</a>
 
           <div class="header-search">
             <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
@@ -134,132 +134,265 @@
         </div>
       </div>
 
-      <div class="main-catalog-wrapper">
-        <section class="filters-form">
-          <h2 class="visually-hidden">ФИЛЬТР:</h2>
+      <div class="main-catalog-background">
+        <div class="main-catalog-wrapper container-positioner">
+          <div class="filters-form-background">
+            <section class="filters-form">
+              <h2 class="visually-hidden">ФИЛЬТР:</h2>
 
-          <hr>
+              <hr>
 
-          <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
-            <fieldset>
-              <legend>Стоимость</legend>
-              <div class="price-slider">
-                <div class="scale">
-                  <div class="bar"></div>
-                  <div class="toggle toggle-min"></div>
-                  <div class="toggle toggle-max"></div>
+              <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
+                <fieldset>
+                  <legend>Стоимость</legend>
+                  <div class="price-slider">
+                    <div class="scale">
+                      <div class="bar"></div>
+                      <div class="toggle toggle-min"></div>
+                      <div class="toggle toggle-max"></div>
+                    </div>
+                    <span class="price-indicator price-indicator-min">от <span class="inner-indicator inner-indicator-min">0</span></span>
+                    <span class="price-indicator price-indicator-max">до <span class="inner-indicator inner-indicator-max">5000</span></span>
+                    <p class="min-price">
+                      <label>
+                        <span class="visually-hidden">Минимальная цена</span>
+                        <input class="price-input-min" type="hidden" name="min-price" value="0">
+                      </label>
+                    </p>
+                    <p class="max-price">
+                      <label>
+                        <span class="visually-hidden">Максимальная цена</span>
+                        <input class="price-input-max" type="hidden" name="max-price" value="5000">
+                      </label>
+                    </p>
+                  </div>
+                </fieldset>
+
+                <hr>
+
+                <fieldset class="color-form">
+                  <legend>Цвет</legend>
+                  <p>
+                    <input id="black-color" type="checkbox" name="color" value="black" checked>
+                    <label for="black-color">Черный</label>
+                  </p>
+                  <p>
+                    <input id="white-color" type="checkbox" name="color" value="white">
+                    <label for="white-color">Белый</label>
+                  </p>
+                  <p>
+                    <input id="blue-color" type="checkbox" name="color" value="blue" checked>
+                    <label for="blue-color">Синий</label>
+                  </p>
+                  <p>
+                    <input id="red-color" type="checkbox" name="color" value="red" checked>
+                    <label for="red-color">Красный</label>
+                  </p>
+                  <p>
+                    <input id="pink-color" type="checkbox" name="color" value="pink">
+                    <label for="pink-color">Розовый</label>
+                  </p>
+                </fieldset>
+
+                <hr>
+
+                <fieldset class="bluetooth-form">
+                  <legend>Bluetooth</legend>
+                  <p>
+                    <input id="bluetooth-true" type="radio" name="bluetooth" value="true" checked>
+                    <label for="bluetooth-true">Есть</label>
+                  </p>
+                  <p>
+                    <input id="bluetooth-false" type="radio" name="bluetooth" value="false">
+                    <label for="bluetooth-false">Нет</label>
+                  </p>
+                </fieldset>
+
+                <button class="submit-btn common-button" type="submit">Показать</button>
+              </form>
+            </section>
+          </div>
+
+          <section class="monopods-catalog">
+            <h2 class="visually-hidden">Каталог товаров</h2>
+
+            <ul class="main-catalog-list">
+              <li>
+                <img src="img/item-1.jpg" alt="Любительская селфи-палка">
+                <div class="list-item-wrap">
+                  <h3><a href="#">Любительская селфи-палка</a></h3>
+                  <span class="price">500 руб.</span>
                 </div>
-              </div>
-              <p class="min-price">
-                <label>
-                  <span class="visually-hidden">Минимальная цена</span>
-                  <input type="text" name="min-price" value="0">
-                </label>
-              </p>
-              <p class="max-price">
-                <label>
-                  <span class="visually-hidden">Максимальная цена</span>
-                  <input type="text" name="max-price" value="5000">
-                </label>
-              </p>
-            </fieldset>
+                <div class="item-hover">
+                  <button class="item-buy common-button">В корзину</button>
+                  <button class="item-compare">Добавить к сравнению</button>
+                </div>
+              </li>
+              <li>
+                <img src="img/item-2.jpg" alt="Профессиональная селфи-палка">
+                <div class="list-item-wrap">
+                  <h3><a href="#">Профессиональная<br> селфи-палка</a></h3>
+                  <span class="price">1 500 руб.</span>
+                </div>
+                <div class="item-hover">
+                  <button class="item-buy common-button">В корзину</button>
+                  <button class="item-compare">Добавить к сравнению</button>
+                </div>
+              </li>
+              <li>
+                <img src="img/item-3.jpg" alt="Непотопляемая селфи-палка">
+                <div class="list-item-wrap">
+                  <h3><a href="#">Непотопляемая селфи-палка</a></h3>
+                  <span class="price">2 500 руб.</span>
+                </div>
+                <div class="item-hover">
+                  <button class="item-buy common-button">В корзину</button>
+                  <button class="item-compare">Добавить к сравнению</button>
+                </div>
+              </li>
+              <li>
+                <img src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»">
+                <div class="list-item-wrap">
+                  <h3><a href="#">Селфи-палка «Следуй за<br> мной»</a></h3>
+                  <span class="price">4 900 руб.</span>
+                </div>
+                <div class="item-hover">
+                  <button class="item-buy common-button">В корзину</button>
+                  <button class="item-compare">Добавить к сравнению</button>
+                </div>
+              </li>
+            </ul>
 
-            <hr>
-
-            <fieldset>
-              <legend>Цвет</legend>
-              <p>
-                <input id="black-color" type="checkbox" name="color" value="black">
-                <label for="black-color">Черный</label>
-              </p>
-              <p>
-                <input id="white-color" type="checkbox" name="color" value="white">
-                <label for="white-color">Белый</label>
-              </p>
-              <p>
-                <input id="blue-color" type="checkbox" name="blue" value="blue">
-                <label for="blue-color">Синий</label>
-              </p>
-              <p>
-                <input id="red-color" type="checkbox" name="color" value="red">
-                <label for="red-color">Красный</label>
-              </p>
-              <p>
-                <input id="pink-color" type="checkbox" name="color" value="pink">
-                <label for="pink-color">Розовый</label>
-              </p>
-            </fieldset>
-
-            <hr>
-
-            <fieldset>
-              <legend>Bluetooth</legend>
-              <p>
-                <input id="bluetooth-true" type="radio" name="bluetooth" value="true">
-                <label for="bluetooth-true">Есть</label>
-              </p>
-              <p>
-                <input id="bluetooth-false" type="radio" name="bluetooth" value="false">
-                <label for="bluetooth-false">Нет</label>
-              </p>
-            </fieldset>
-
-            <button type="submit">Показать</button>
-          </form>
-        </section>
-
-        <section class="main-catalog">
-          <h2 class="visually-hidden">Каталог товаров</h2>
-
-          <ul class="main-catalog-list">
-            <li>
-              <img src="item-1.jpg" alt="Любительская селфи-палка">
-              <h3><a href="#">Любительская селфи-палка</a></h3>
-              <span class="price">500 руб.</span>
-              <div class="item-hover">
-                <button class="item-buy">В корзину</button>
-                <button class="item-compare">Добавить к сравнению</button>
-              </div>
-            </li>
-            <li>
-              <img src="item-2.jpg" alt="Профессиональная селфи-палка">
-              <h3>Профессиональная селфи-палка</h3>
-              <span class="price">1 500 руб.</span>
-              <div class="item-hover">
-                <button class="item-buy">В корзину</button>
-                <button class="item-compare">Добавить к сравнению</button>
-              </div>
-            </li>
-            <li>
-              <img src="item-3.jpg" alt="Непотопляемая селфи-палка">
-              <h3>Непотопляемая селфи-палка</h3>
-              <span class="price">2 500 руб.</span>
-              <div class="item-hover">
-                <button class="item-buy">В корзину</button>
-                <button class="item-compare">Добавить к сравнению</button>
-              </div>
-            </li>
-            <li>
-              <img src="item-4.jpg" alt="Селфи-палка «Следуй за мной»">
-              <h3>Селфи-палка «Следуй за мной»</h3>
-              <span class="price">4 900 руб.</span>
-              <div class="item-hover">
-                <button class="item-buy">В корзину</button>
-                <button class="item-compare">Добавить к сравнению</button>
-              </div>
-            </li>
-          </ul>
-
-          <ul class="paginator-list">
-            <li><a href="#">Назад</a></li>
-            <li class="paginator-list-active"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">Вперед</a></li>
-          </ul>
-        </section>
+            <ul class="paginator-list">
+              <li><a href="#">Назад</a></li>
+              <li class="paginator-list-active"><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">Вперед</a></li>
+            </ul>
+          </section>
+        </div>
       </div>
     </main>
 
+    <footer class="main-footer">
+      <div class="footer-wrapper container-positioner">
+        <div class="left-footer-wrapper">
+          <a class="main-logo footer-logo" href="#">DEVICE</a>
+          <p class="footer-address">г. Москва, ул. Строителей, 15</p>
+        </div>
+        <div class="center-footer-wrapper">
+          <nav class="footer-navigation">
+            <ul>
+              <li><a href="#">ДОСТАВКА</a></li>
+              <li><a href="#">ГАРАНТИЯ</a></li>
+              <li><a href="#">КОНТАКТЫ</a></li>
+            </ul>
+          </nav>
+
+          <ul class="page-footer-social-icons">
+            <li>
+              <a class="social-button fb-button" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32">
+                <path fill="rgba(255, 255, 255, 0.3)" d="M16,0C7.164,0,0,7.163,0,16s7.164,16,16,16c8.837,0,16-7.164,16-16S24.837,0,16,0z M20.062,9.455h-3.021
+                	v3.444h3.021v3.445h-3.021v8.61h-3.021v-8.61H11v-3.445h3.021V9.455c0-1.902,1.353-3.445,3.021-3.445h3.021V9.455z"/>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-button inst-button" href="#">
+                <span class="visually-hidden">Инстаграм</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32">
+                  <g>
+                  	<path fill="rgba(255, 255, 255, 0.3)" d="M20.916,16c0,2.728-2.211,4.938-4.938,4.938S11.039,18.728,11.039,16c0-0.394,0.051-0.773,0.138-1.14
+                  		h-0.897v6.838h11.396V14.86h-0.897C20.865,15.227,20.916,15.606,20.916,16z"/>
+                  	<path fill="rgba(255, 255, 255, 0.3)" d="M15.978,18.659c1.466,0,2.659-1.193,2.659-2.659s-1.193-2.659-2.659-2.659
+                  		c-1.466,0-2.659,1.193-2.659,2.659S14.511,18.659,15.978,18.659z"/>
+                  	<rect x="18.637" y="10.302" fill="rgba(255, 255, 255, 0.3)" width="3.039" height="3.039"/>
+                  	<path fill="rgba(255, 255, 255, 0.3)" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
+                  		 M23.955,21.698c0,1.254-1.025,2.279-2.279,2.279H10.279C9.026,23.978,8,22.952,8,21.698V10.302c0-1.253,1.026-2.279,2.279-2.279
+                  		h11.396c1.254,0,2.279,1.026,2.279,2.279V21.698z"/>
+                  </g>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-button vk-button" href="#">
+                <span class="visually-hidden">Вконтакте</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32">
+                <g>
+                	<path fill="rgba(255, 255, 255, 0.3)" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
+                		 M23.944,12.809c-0.251,6.516-3.463,10.832-10.992,10.702c-0.14,0-0.205,0-0.233,0c-0.015,0-0.021,0-0.021,0
+                		c-0.029,0-0.094,0-0.232,0c-0.447,0-4.543-0.443-5.344-1.823c2.479,0.19,4.247-0.406,5.12-1.136
+                		c-1.048-0.289-2.923-0.461-3.251-2.848c0.384,0.104,0.618,0.221,1.299,0.113c-1.307-0.824-2.758-1.519-2.679-3.643
+                		c0.311,0.317,1.164,0.518,1.46,0.457c-0.768-0.233-2.149-3.244-0.974-4.781c1.984,1.79,4.075,3.482,7.804,3.643
+                		c0.227-2.214,1.24-3.699,3.168-4.325c1.84-0.479,3.255,0.26,3.901,1.138c0.737-0.224,1.453-0.466,2.193-0.685
+                		c-0.004,0.833-0.569,1.463-0.935,1.709c0.747,0.165,1.423-0.475,1.423-0.475C25.467,11.818,24.557,12.58,23.944,12.809z"/>
+                </g>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="right-footer-wrapper">
+          <div class="right-footer-inner-wrapper">
+            <nav class="user-navigation footer-user-navigation">
+              <ul>
+                <li>
+                  <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="13px" height="12px" viewBox="0 0 13 12">
+                      <path fill="#ffc600" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
+                      	C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
+                    </svg>
+                    Валентин Петухов
+                  </a>
+                </li>
+                <li class="footer-log-out">
+                  <a href="#">
+                    Выйти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+
+            <div class="compare footer-compare">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10px" height="10px" viewBox="0 0 10 10">
+                  <rect fill="#ffc600" x="8" y="2" width="1.984" height="8"/>
+                  <rect fill="#ffc600" y="3" width="1.984" height="7"/>
+                  <rect fill="#ffc600" x="4" width="2" height="10"/>
+                </svg>
+                Сравнить
+              </a>
+            </div>
+
+            <div class="basket footer-basket">
+              <a href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="12px" height="12px" viewBox="0 0 12 12">
+                  	<path fill="#ffc600" d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
+                  		c-0.594,0-1.078-0.458-1.078-1.022V2.863H4.909V4.09c0,0.563-0.485,1.022-1.08,1.022c-0.595,0-1.078-0.458-1.078-1.022V2.863H0.438
+                  		c-0.125,0-0.243,0.056-0.327,0.154C0.028,3.115-0.012,3.245,0.003,3.375l0.776,7.134c0.015,0.806,0.642,1.455,1.411,1.455h7.595
+                  		c0.77,0,1.396-0.649,1.411-1.455l0.776-7.134C11.987,3.245,11.946,3.115,11.864,3.017z"/>
+                  	<path fill="#ffc600" d="M3.829,4.499c0.239,0,0.433-0.184,0.433-0.409V1.84c0-0.632,0.672-1.022,1.295-1.022h1.079
+                  		c0.655,0,1.078,0.401,1.078,1.022v2.25c0,0.225,0.194,0.409,0.431,0.409c0.239,0,0.433-0.184,0.433-0.409V1.84
+                  		C8.577,0.773,7.761,0,6.636,0H5.557C4.367,0,3.398,0.826,3.398,1.84v2.25C3.398,4.315,3.592,4.499,3.829,4.499z"/>
+                </svg>
+                Корзина
+              </a>
+            </div>
+          </div>
+
+          <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
+
+          <a class="htmlacademy-link" href="https://htmlacademy.ru">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09">
+              <path fill="#ffc600" d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </footer>
+    <script src="js/price-slider.js"></script>
   </body>
 </html>
