--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
 
           <div class="header-search">
             <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-              <label for="header-search">
+              <label for="main-search">
                 <span class="visually-hidden">Поиск</span>
               </label>
               <input type="text" id="main-search" name="search" placeholder="Поиск по сайту" autocomplete="off">
