--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
           <div class="header-search">
             <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-              <label for="header-search">
+              <label for="main-search">
                 <span class="visually-hidden">Поиск</span>
               </label>
               <input type="text" id="main-search" name="search" placeholder="Поиск по сайту" autocomplete="off">
@@ -405,7 +405,7 @@
         </div>
         <p>
           <label for="message-form"> Текст письма:</label>
-          <textarea type="text" id="message-form" name="message" placeholder="В свободной форме"></textarea>
+          <textarea id="message-form" name="message" placeholder="В свободной форме"></textarea>
         </p>
         <button class="send-btn common-button" type="submit">Отправить</button>
       </form>
