--- a/catalog.html
+++ b/catalog.html
@@ -212,65 +212,66 @@
               </form>
             </section>
           </div>
+          <div class="monopods-catalog-background">
+            <section class="monopods-catalog">
+              <h2 class="visually-hidden">Каталог товаров</h2>
 
-          <section class="monopods-catalog">
-            <h2 class="visually-hidden">Каталог товаров</h2>
+              <ul class="main-catalog-list">
+                <li>
+                  <img src="img/item-1.jpg" alt="Любительская селфи-палка">
+                  <div class="list-item-wrap">
+                    <h3><a href="#">Любительская селфи-палка</a></h3>
+                    <span class="price">500 руб.</span>
+                  </div>
+                  <div class="item-hover">
+                    <button class="item-buy common-button">В корзину</button>
+                    <button class="item-compare">Добавить к сравнению</button>
+                  </div>
+                </li>
+                <li>
+                  <img src="img/item-2.jpg" alt="Профессиональная селфи-палка">
+                  <div class="list-item-wrap">
+                    <h3><a href="#">Профессиональная<br> селфи-палка</a></h3>
+                    <span class="price">1 500 руб.</span>
+                  </div>
+                  <div class="item-hover">
+                    <button class="item-buy common-button">В корзину</button>
+                    <button class="item-compare">Добавить к сравнению</button>
+                  </div>
+                </li>
+                <li>
+                  <img src="img/item-3.jpg" alt="Непотопляемая селфи-палка">
+                  <div class="list-item-wrap">
+                    <h3><a href="#">Непотопляемая селфи-палка</a></h3>
+                    <span class="price">2 500 руб.</span>
+                  </div>
+                  <div class="item-hover">
+                    <button class="item-buy common-button">В корзину</button>
+                    <button class="item-compare">Добавить к сравнению</button>
+                  </div>
+                </li>
+                <li>
+                  <img src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»">
+                  <div class="list-item-wrap">
+                    <h3><a href="#">Селфи-палка «Следуй за<br> мной»</a></h3>
+                    <span class="price">4 900 руб.</span>
+                  </div>
+                  <div class="item-hover">
+                    <button class="item-buy common-button">В корзину</button>
+                    <button class="item-compare">Добавить к сравнению</button>
+                  </div>
+                </li>
+              </ul>
 
-            <ul class="main-catalog-list">
-              <li>
-                <img src="img/item-1.jpg" alt="Любительская селфи-палка">
-                <div class="list-item-wrap">
-                  <h3><a href="#">Любительская селфи-палка</a></h3>
-                  <span class="price">500 руб.</span>
-                </div>
-                <div class="item-hover">
-                  <button class="item-buy common-button">В корзину</button>
-                  <button class="item-compare">Добавить к сравнению</button>
-                </div>
-              </li>
-              <li>
-                <img src="img/item-2.jpg" alt="Профессиональная селфи-палка">
-                <div class="list-item-wrap">
-                  <h3><a href="#">Профессиональная<br> селфи-палка</a></h3>
-                  <span class="price">1 500 руб.</span>
-                </div>
-                <div class="item-hover">
-                  <button class="item-buy common-button">В корзину</button>
-                  <button class="item-compare">Добавить к сравнению</button>
-                </div>
-              </li>
-              <li>
-                <img src="img/item-3.jpg" alt="Непотопляемая селфи-палка">
-                <div class="list-item-wrap">
-                  <h3><a href="#">Непотопляемая селфи-палка</a></h3>
-                  <span class="price">2 500 руб.</span>
-                </div>
-                <div class="item-hover">
-                  <button class="item-buy common-button">В корзину</button>
-                  <button class="item-compare">Добавить к сравнению</button>
-                </div>
-              </li>
-              <li>
-                <img src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»">
-                <div class="list-item-wrap">
-                  <h3><a href="#">Селфи-палка «Следуй за<br> мной»</a></h3>
-                  <span class="price">4 900 руб.</span>
-                </div>
-                <div class="item-hover">
-                  <button class="item-buy common-button">В корзину</button>
-                  <button class="item-compare">Добавить к сравнению</button>
-                </div>
-              </li>
-            </ul>
-
-            <ul class="paginator-list">
-              <li><a href="#">Назад</a></li>
-              <li class="paginator-list-active"><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">Вперед</a></li>
-            </ul>
-          </section>
+              <ul class="paginator-list">
+                <li><a href="#">Назад</a></li>
+                <li class="paginator-list-active"><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">Вперед</a></li>
+              </ul>
+            </section>
+          </div>
         </div>
       </div>
     </main>
